--- a/app/less/style.less
+++ b/app/less/style.less
@@ -4,7 +4,87 @@
 
 
 
+.global-menu {
+max-width: 100%;
+}
+.global-menu__wrapper {
+
+  
+  margin: 0 auto;
+  padding: 15px 20px;
+}
+.global__logo {
+  font-family: @font-regular;
+  font-size: 28px;
+  
+}
+
+.global_link {
+  text-decoration: none;
+  color: rgb(77, 77, 77);
+}
+
+.global_link:hover {
+   
+  color: #000;
+}
+
+.portfolio {
+  max-width: 100%;
+}
+.portfolio__wrapper {
+  padding: 0 10px;
+  margin: 0 auto;
+  display: flex;
+  
+}
+.portfolio__item {
+  // max-width: 500px;
+  padding: 10px;
+}
+.portfolio__img {
+  max-width: 100%;
+}
+.page-content {
+  max-width: 100%;
+}
+
+.page-content-wrapper {
+  max-width: 1140px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+* {
+  line-height: 1.5em;
+}
+
 h1 {
-    font-family: @font-bold;
-    font-size: 50px;
-};
+  font-family: @font-regular;
+  font-size: 44px;
+  color: #292929;
+}
+
+h2 {
+  font-family: @font-regular;
+  font-size: 30px;
+  color: #292929;
+}
+
+p {
+  font-family: @font-regular;
+  font-size: 18px;
+  margin-top: 0.5em; /* Отступ сверху */
+  margin-bottom: 1em; /* Отступ снизу */
+  max-width: 35em;
+  line-height: 1.4em;
+  color: #3a3a3a;
+}
+
+
+
+.page-content__img {
+  max-width: 100%;
+  margin-top: 0.5em; /* Отступ сверху */
+  margin-bottom: 1em; /* Отступ снизу */
+}
