--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,109 +1,1 @@
-body,
-div,
-dl,
-dt,
-dd,
-ul,
-li,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-pre,
-code,
-form,
-fieldset,
-input,
-textarea,
-p,
-blockquote,
-th,
-td {
-  margin: 0;
-  padding: 0;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-fieldset,
-img,
-abbr {
-  border: 0;
-}
-address,
-caption,
-cite,
-code,
-dfn,
-em,
-strong,
-th,
-var {
-  font-style: normal;
-  font-weight: normal;
-}
-ul li {
-  list-style: none;
-}
-caption,
-th {
-  text-align: left;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 100%;
-  font-weight: normal;
-}
-sup {
-  vertical-align: text-top;
-}
-sub {
-  vertical-align: text-bottom;
-}
-input,
-textarea,
-select {
-  font-family: inherit;
-  font-size: inherit;
-  font-weight: inherit;
-}
-legend {
-  color: #000;
-}
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section,
-main {
-  display: block;
-}
-img {
-  max-width: 100%;
-  height: auto;
-}
-@font-face {
-  font-family: 'Roboto Regular';
-  src: url('../../fonts/RobotoRegular/RobotoRegular.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Roboto Bold';
-  src: url('../../fonts/RobotoBold/RobotoBold.ttf') format('truetype');
-}
-h1 {
-  font-family: 'Roboto Bold';
-  font-size: 50px;
-}
+blockquote,body,code,dd,div,dl,dt,fieldset,form,h1,h2,h3,h4,h5,h6,input,li,p,pre,td,textarea,th,ul{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}abbr,fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:400}ul li{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:400}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,select,textarea{font-family:inherit;font-size:inherit;font-weight:inherit}legend{color:#000}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}img{max-width:100%;height:auto}@font-face{font-family:'Roboto Regular';src:url(../fonts/RobotoRegular/RobotoRegular.eot);src:url(../fonts/RobotoRegular/RobotoRegular.eot?#iefix) format('embedded-opentype'),url(../fonts/RobotoRegular/RobotoRegular.woff) format('woff'),url(../fonts/RobotoRegular/RobotoRegular.ttf) format('truetype');font-weight:400;font-style:normal}@font-face{font-family:'Roboto Black';src:url(../fonts/RobotoBlack/Roboto-Black.ttf) format('truetype')}@font-face{font-family:'Awesome Regular';src:url(../fonts/awesome/fa-regular-400.ttf) format('truetype');font-weight:400;font-style:normal}.global-menu{max-width:100%}.global-menu__wrapper{margin:0 auto;padding:15px 20px}.global__logo{font-family:'Roboto Regular',Helvetica,Arial,sans-serif;font-size:28px}.global_link{text-decoration:none;color:#4d4d4d}.global_link:hover{color:#000}.portfolio{max-width:100%}.portfolio__wrapper{padding:0 10px;margin:0 auto;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}.portfolio__item{padding:10px}.portfolio__img{max-width:100%}.page-content{max-width:100%}.page-content-wrapper{max-width:1140px;padding:0 20px;margin:0 auto}*{line-height:1.5em}h1{font-family:'Roboto Regular',Helvetica,Arial,sans-serif;font-size:44px;color:#292929}h2{font-family:'Roboto Regular',Helvetica,Arial,sans-serif;font-size:30px;color:#292929}p{font-family:'Roboto Regular',Helvetica,Arial,sans-serif;font-size:18px;margin-top:.5em;margin-bottom:1em;max-width:35em;line-height:1.4em;color:#3a3a3a}.page-content__img{max-width:100%;margin-top:.5em;margin-bottom:1em}
