--- a/app/less/style.less
+++ b/app/less/style.less
@@ -8,11 +8,19 @@
 max-width: 100%;
 }
 .global-menu__wrapper {
-
-  
   margin: 0 auto;
   padding: 15px 20px;
+  display: flex;
+  align-items: center;
 }
+
+.global-item {
+  font-family: @font-regular;
+  font-size: 18px;
+  color: rgb(41, 41, 41);
+  padding: 0 20px;
+}
+
 .global__logo {
   font-family: @font-regular;
   font-size: 28px;
