--- a/app/less/style.less
+++ b/app/less/style.less
@@ -2,10 +2,8 @@
 @import "part/var.less";
 @import "part/fonts.less";
 
-
-
 .global-menu {
-max-width: 100%;
+  max-width: 100%;
 }
 .global-menu__wrapper {
   margin: 0 auto;
@@ -24,16 +22,15 @@ max-width: 100%;
 .global__logo {
   font-family: @font-regular;
   font-size: 28px;
-  
+  padding: 0 20px;
 }
 
-.global_link {
+.global__link {
   text-decoration: none;
   color: rgb(77, 77, 77);
 }
 
-.global_link:hover {
-   
+.global__link:hover {
   color: #000;
 }
 
@@ -44,7 +41,6 @@ max-width: 100%;
   padding: 0 10px;
   margin: 0 auto;
   display: flex;
-  
 }
 .portfolio__item {
   // max-width: 500px;
@@ -88,8 +84,6 @@ p {
   line-height: 1.4em;
   color: #3a3a3a;
 }
-
-
 
 .page-content__img {
   max-width: 100%;
